Return all deleted budgets
